kubernetesYML/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1 # How many replicas we want
  selector:   # How do we indentify pods we should manage?
    matchLabels:
      app: frontend # Match all nodes with this label
  template: # How should pods within this deployment be created?
    metadata:
      labels:
        app: frontend # Specify a label, used in the above selector
    spec:
      containers:
        - name: frontend
          image: gitlab.liu.se:5000/tddc88-company-3-2020/deploy/frontend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
          resources: # Specify what resources we need...
            limits: # ...both absolute limits...
              cpu: 100m
              memory: 80Mi
            requests: # ...and what we probably will get by with.
              cpu: 10m
              memory: 42Mi
      #imagePullSecrets:
      #  - name: regcred
      restartPolicy: Always
