kubernetesYML/flask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gitlab.liu.se:5000/tddc88-company-3-2020/deploy/backend:latest
          imagePullPolicy: Always
          #envFrom:
           # - secretRef:
            #    name: regcred
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: # Specify what resources we need...
            limits: # ...both absolute limits...
              cpu: 100m
              memory: 80Mi
            requests: # ...and what we probably will get by with.
              cpu: 10m
              memory: 42Mi
      #imagePullSecrets:
       # - name: regcred
      restartPolicy: Always
