kubernetesYML/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
  - port: 80  # ... and should be exposed on port 80, ...
    protocol: TCP # ... using TCP ...
    targetPort: 80 # ... to expose port 8000 of internal pods ...
    name: frontend
  selector: # ... designated by the selector 'hello' ...
    app: frontend
  type: ClusterIP # ... to an internal cluster IP address
