kubernetesYML/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations: # This is information to the Ingress modules of kubernetes, to note that you want the endpoint publicly accessible.
    kubernetes.io/ingress.class: nginx-public
  name: ingress
  labels:
    app: ingress
spec:
  rules:
    - host: tddc88-company-3-2020.kubernetes-public.it.liu.se
      http:
        paths:
        - path: /
          backend:
            serviceName: backend
            servicePort: 80
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
